# SFMLGameJam2016

./: CMakeLists.txt  README.md
Linux_build/: Game
Mac_build/OrangeGuy.app/Contents/: Info.plist
Mac_build/OrangeGuy.app/Contents/Frameworks/FLAC.framework/Versions/A/: FLAC
Mac_build/OrangeGuy.app/Contents/Frameworks/OpenAL.framework/Versions/A/: OpenAL
Mac_build/OrangeGuy.app/Contents/Frameworks/ogg.framework/Versions/A/: ogg
Mac_build/OrangeGuy.app/Contents/Frameworks/sfml-audio.framework/Versions/2.3.2/: sfml-audio
Mac_build/OrangeGuy.app/Contents/Frameworks/sfml-graphics.framework/Versions/2.3.2/: sfml-graphics
Mac_build/OrangeGuy.app/Contents/Frameworks/sfml-system.framework/Versions/2.3.2/: sfml-system
Mac_build/OrangeGuy.app/Contents/Frameworks/sfml-window.framework/Versions/2.3.2/: sfml-window
Mac_build/OrangeGuy.app/Contents/Frameworks/vorbis.framework/Versions/A/: vorbis
Mac_build/OrangeGuy.app/Contents/Frameworks/vorbisenc.framework/Versions/A/: vorbisenc
Mac_build/OrangeGuy.app/Contents/Frameworks/vorbisfile.framework/Versions/A/: vorbisfile
Mac_build/OrangeGuy.app/Contents/MacOS/: OrangeGuy
Source/: Animator.cpp  Animator.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  Game.cpp  Game.h  Platform.cpp  Platform.h  Platforms.cpp  Platforms.h  Player.cpp  Player.h  Splash.h
osx/: CMakeLists.txt  Icon.icns  ResourcePath.mm
other/: CMakeLists.txt  ResourcePath.cpp
